# ShagunIntelligence

./: .dockerignore  .env.example  .env.production.template  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  README.md  SECURITY.md  SECURITY_NOTICE.md  SECURITY_SETUP_GUIDE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.claude/: settings.local.json
.github/: CODEOWNERS  DEPENDABOT_BEST_PRACTICES.md  README.md  REPOSITORY_SETTINGS.md  SETUP_COMMANDS.md  dependabot.yml  pull_request_template.md  ruleset.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml  question.yml
.github/codeql/: codeql-config.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml
agents/: base_quality_aware_agent.py  crew_manager.py
agents/coordinator/: __init__.py  agent.py  communication_hub.py  decision_fusion_engine.py  learning_manager.py  performance_monitor.py  task_delegator.py  trade_approval_workflow.py
agents/data_processor/: agent.py
agents/market_analyst/: agent.py  concurrent_monitor.py  data_processor.py  pattern_recognition.py  scheduler.py  state_manager.py  statistical_analyzer.py  volume_analyzer.py  watchlist_manager.py
agents/risk_manager/: __init__.py  agent.py  circuit_breaker.py  enhanced_agent.py  portfolio_analyzer.py  position_sizing.py  risk_metrics.py  stop_loss_manager.py
agents/sentiment_analyst/: __init__.py  agent.py  alert_manager.py  news_scraper.py  report_generator.py  sentiment_scorer.py  social_media_monitor.py
agents/technical_indicator/: __init__.py  agent.py  indicator_calculator.py  rolling_data_manager.py  signal_generator.py  visualization_formatter.py
agents/trade_executor/: __init__.py  agent.py  order_manager.py  order_timing_optimizer.py  paper_trading_manager.py  position_monitor.py  trade_logger.py
agents/trader/: agent.py
app/: main.py
app/api/: websocket.py
app/core/: api_config.py  api_health_monitor.py  api_key_manager.py  api_rate_limiter.py  api_startup.py  auth.py  config.py  database.py  logging_config.py  resilience.py  scheduler.py  security.py
app/db/: base.py  session.py
app/middleware/: error_handling.py  security.py
app/models/: trade.py  user.py
app/schemas/: auth.py  market.py  trading.py
app/services/: advanced_order_management.py  automated_trading.py  broker_integration.py  database_services.py  enhanced_risk_management.py  market_data_integration.py  market_schedule.py  multi_timeframe_analysis.py  websocket_manager.py
backend/data_sources/: README.md  __init__.py  base.py  data_quality_validator.py  factory.py  integration.py  multi_source_manager.py
backend/streaming/: __init__.py  agent_integration.py  performance_monitor.py  realtime_pipeline.py  stream_manager.py
config/: trading_modes.md
config/environments/: development.env  production.env
dashboard/: index.html  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  vite-env.d.ts
deploy/: apple-container.sh  backend-only-docker.sh  macos-container.sh  orbstack-deployment.sh
disaster-recovery/: runbook.md
docs/: AGENT_ARCHITECTURE.md  API_DOCUMENTATION.md  ARCHITECTURE_DIAGRAMS.md  DEPLOYMENT_SUMMARY.md  INTEGRATION_GUIDE.md  PERFORMANCE_REPORT.md  README.md  SETUP_GUIDE.md  SYSTEM_ARCHITECTURE.md  TEST_COVERAGE_REPORT.md  TROUBLESHOOTING.md
docs/api/: API_DOCUMENTATION.md
docs/architecture/: AGENT_ARCHITECTURE.md
docs/deployment/: SSL_TLS_CONFIGURATION.md
docs/security/: ENHANCED_RESILIENCE_SYSTEM.md
docs/setup/: API_KEY_SETUP_GUIDE.md  KITE_CONNECT_SETUP.md  SETUP_GUIDE.md
docs/trading/: AUTOMATED_TRADING_SETUP.md  LIVE_TRADING_SETUP_GUIDE.md
examples/: quality_aware_trading_example.py  realtime_streaming_demo.py
k8s/: app-deployment.yaml  configmap.yaml  namespace.yaml  nginx-deployment.yaml  postgres.yaml  rbac.yaml  redis.yaml  secrets.yaml
k8s/backup/: backup-cronjob.yaml  velero-config.yaml
k8s/sealed-secrets/: README.md
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
monitoring/alerts/: app-alerts.yml  infra-alerts.yml
nginx/: nginx.conf
scripts/: configure-security-settings.sh  create_live_trading_user.py  deploy.sh  deploy_production.sh  deploy_production_ssl.sh  docker_logs.sh  docker_rebuild.sh  docker_start.sh  docker_status.sh  docker_stop.sh  init.sql  kite_auth_helper.py  live_trading_1000_test.py  monitor_dashboard.py  run_comprehensive_tests.py  setup-repo-security.sh  setup_kite_credentials.py  ssl_setup.sh  start_frontend.sh  system_validation.py  test_automated_trading.py  test_system.py  validate_api_keys.py  verify-repository.sh
security/: network-policies.yaml  pod-security-policies.yaml  vault-config.yaml
services/ai_integration/: ai_service_manager.py  anthropic_client.py  cost_tracker.py  crew_tools.py  openai_client.py  prompt_templates.py  rate_limiter.py  response_cache.py
services/data_pipeline/: __init__.py  data_buffer.py  data_distributor.py  data_synchronizer.py  data_validator.py  performance_tracker.py  pipeline.py  (+2 more)
test_output/: junit_report.xml  test_report.html  test_report.json
tests/: conftest.py  test_advanced_order_management.py  test_data_quality_validator.py  test_enhanced_risk_management.py  test_grok_sentiment.py  test_load_performance.py  test_market_sources.py  test_multi_source_manager.py  test_multi_timeframe_analysis.py  test_quality_aware_agents.py  test_trading_accuracy.py  test_twitter_sentiment.py
(+103 files in other folders)
